link submit button fix color contrast

--- a/style/_url shortener.scss
+++ b/style/_url shortener.scss
@@ -31,7 +31,7 @@
         }
         
         #submit {
-            background: $cyan;
+            background: #1B8383;
             font-family: inherit;
             color: #fff;
             font-weight: 700;
